--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,10 @@
                     </sourceDestDir>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
